@@ -1,3 +1,4 @@
+Build a Fraction: Augment level list for picture levels 6-10 (with copies of level 5)
 Build a Fraction: When going back to level selection carousel, remember which page you were on.
 Build a Fraction: Play sound for completing individual challenges when placed in the target box rather than when built
 Equality lab: Water glasses are the wrong color in the bucket
